Bug 443869 - "Fix some request model badness in nsDOMClassInfo". r+sr=jst.